fixed errors in the previous commit
